# raw_image_pipeline

raw_image_pipeline_python/scripts/: color_calibration.py  color_calibration.yaml
raw_image_pipeline_ros/: CMakeLists.txt  package.xml
raw_image_pipeline_ros/include/raw_image_pipeline_ros/: raw_image_pipeline_ros.hpp
raw_image_pipeline_ros/launch/: raw_image_pipeline_composable.launch  raw_image_pipeline_standalone.launch
raw_image_pipeline_ros/src/: raw_image_pipeline_ros.cpp
