<?xml version="1.0"?>
<package format="2">
  <name>raw_image_pipeline_ros</name>
  <version>0.0.0</version>
  <description>ROS interfaces for raw_image_pipeline</description>

  <author email="matias@robots.ox.ac.uk">Matias Mattamala</author>
  <author email="timonh@leggedrobotics.com">Timon Homberger</author>
  <maintainer email="matias@robots.ox.ac.uk">Matias Mattamala</maintainer>

  <license>Proprietary</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  
  <depend>common_interfaces</depend>
  <depend>raw_image_pipeline</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>rclcpp</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
